--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -17,4 +17,5 @@ collections:
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Image", name: "image", widget: "image"}
+      - {label: "Thumbnail Image", name: "thumbnail_image", widget: "image"}
       - {label: "Image Alt", name: "image_alt", widget: "string"}
